RV, Volley - not full

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LibraryAndroid</string>
+    <string name="app_name">CuisinesOfTheWorld</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="CuisinesOfTheWorld">CuisinesOfTheWorld</string>
